# glamira-pipeline

./: .gitignore  README.md  pyproject.toml
src/: config.py  database.py  main.py
src/crawler/: crawler.py  parser.py
src/geo/: ip_processor.py
